--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,11 +21,11 @@ body{
 
 /* Estilo do Cabeçalho*/
 header{
-    padding: 40px 4%;
+    padding: 20px 4%;
 }
 
 h1{
-    text-align: center;
+    text-align: left;
 }
 
 header > .interface{
@@ -75,11 +75,19 @@ header nav.menu ul li{
 /* Estilo do topo do site*/
 section.topo-do-site{
     line-height: 40px;
+    padding: 70px 4%;
 }
 
 .topo-do-site .txt-topo-site h1{
-    font-size: 36px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    font-family: "Merriweather", serif;
+    font-weight: 600;
+}
+
+h7{
+    font-size: 28px;
+    font-family: "Merriweather", serif;
+    font-weight: 600;
 }
 
 .topo-do-site .txt-topo-site p{
@@ -117,7 +125,8 @@ section.sobre .flex{
     margin-bottom: 30px;
     line-height: 40px;
     display: block;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Merriweather", serif;
+    font-weight: 600;
 }
 
 .sobre .txt-sobre p{
@@ -135,8 +144,17 @@ section.servicos{
 }
 
 section.servicos h3{
-    font-size: 30px;
+    font-size: 36px;
     text-align: center;
+    font-family: "Merriweather", serif;
+    font-weight: 600;
+}
+
+h6{
+    font-size: 25px;
+    text-align: center;
+    font-family: "Merriweather", serif;
+    font-weight: 600;
 }
 
 section.servicos .flex{
@@ -167,6 +185,8 @@ section.servicos .flex{
 h4{
     text-align: center;
     font-size: 40px;
+    font-family: "Merriweather", serif;
+    font-weight: 600;
 }
 
 form{
@@ -222,9 +242,11 @@ button.botao:hover{
 }
 
 footer{
-    padding: 50px 4%;
+    padding: 15px 4%;
+    margin-top: 40px;
     align-items: center;
 
+    background-color: aqua;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -241,6 +263,9 @@ footer{
 h5{
     padding-bottom: 20px;
     font-size: 23px;
+    color: #fff;
+    font-family: "Merriweather", serif;
+    font-weight: 600;
 }
 
 i{
@@ -249,5 +274,5 @@ i{
     text-decoration: none;
     font-size: 30px;
 
-    color: aqua;
+    color: #fff;
 }
