--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,6 +58,42 @@ header nav.menu ul li{
     padding: 0 40px;
 }
 
+@media only screen and (max-width: 768px) {
+    header {
+        padding: 10px 0;
+    }
+
+    header .interface {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header .menu {
+        display: block;
+        margin-top: 20px;
+    }
+
+    header .menu ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
+
+    header .menu li {
+        margin: 10px 0;
+    }
+
+    header .btn-contato {
+        margin: 20px 0;
+    }
+
+    header .btn-contato button {
+        padding: 10px 30px;
+        font-size: 18px;
+    }
+}
+
 
 .btn-contato button{
     padding: 10px;
@@ -125,6 +161,36 @@ h7{
     }
     100%{
         top: 30px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .topo-do-site {
+        padding: 60px 0;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .topo-do-site .flex {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .topo-do-site .txt-topo-site h1 {
+        font-size: 28px;
+    }
+
+    .topo-do-site .txt-topo-site h7 {
+        font-size: 20px;
+    }
+
+    .topo-do-site .txt-topo-site p {
+        font-size: 16px;
+    }
+
+    .topo-do-site .txt-topo-site button {
+        padding: 8px 16px;
+        font-size: 14px;
     }
 }
 
@@ -212,6 +278,7 @@ section.servicos .flex{
 section.time{
     padding: 30px 4%;
     margin-top: 10%;
+    text-align: center;
 }
 
 h4{
@@ -226,7 +293,8 @@ h4{
     margin-top: 40px;
     
     display: flex;
-    text-align: center;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: space-between;
 
     font-family: "Merriweather", serif;
@@ -248,6 +316,23 @@ h4{
     color: #000;
     font-size: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+    .integrantes div {
+        align-items: center;
+        justify-content: center;
+        margin-left: 40px;
+    }
+
+    .integrantes div i{
+        color: #000;
+    }
+
+    .integrantes div p{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+}
+
 
 footer{
     padding: 15px 4%;
@@ -276,4 +361,77 @@ i{
     font-size: 30px;
 
     color: #fff;
+}
+
+@media only screen and (max-width: 768px) {
+    /* Estilos para telas menores (como celulares) */
+
+    .interface {
+        padding: 0 10px;
+    }
+
+    .topo-do-site{
+        text-align: center;
+    }
+
+    .txt-topo-site > h1{
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .txt-topo-site > p{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .btn-contato {
+        margin: 20px 0;
+    }
+
+    .btn-contato button {
+        padding: 10px 30px;
+        font-size: 18px;
+    }
+
+    .topo-do-site .txt-topo-site h1 {
+        font-size: 28px;
+    }
+
+    .topo-do-site .txt-topo-site h7 {
+        font-size: 20px;
+    }
+
+    .topo-do-site .txt-topo-site p {
+        font-size: 16px;
+    }
+
+    .topo-do-site .txt-topo-site button {
+        padding: 8px 24px;
+        font-size: 16px;
+    }
+
+    .sobre .flex {
+        flex-direction: column;
+        gap: 30px;
+        text-align: center;
+    }
+
+    .sobre .interface h2 span {
+        font-size: 24px;
+    }
+
+    .sobre .txt-sobre p {
+        font-size: 16px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .servicos .flex {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .servicos .serv-box {
+        flex: 0 0 calc(100% - 40px);
+        padding: 20px;
+    }
+
 }
