--- a/CSS/style.css
+++ b/CSS/style.css
@@ -309,6 +309,7 @@ h4{
 .integrantes img{
     border: 2px solid #000;
     border-radius: 100px;
+    
 }
 
 .integrantes i{
@@ -321,7 +322,8 @@ h4{
     .integrantes div {
         align-items: center;
         justify-content: center;
-        margin:auto
+        margin: 5%;
+        margin-left: 25%;
     }
 
     .integrantes div i{
